--- a/spikes/reagent-spike/resources/public/main.html
+++ b/spikes/reagent-spike/resources/public/main.html
@@ -3,10 +3,31 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="/css/site.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+<link>
 <div id="app">
     <h3>ClojureScript has not been compiled!</h3>
     <p>Please run <pre>lein figwheel</pre> in order to start the compiler</p>
 </div>
+
+<!-- jquery -->
+<script src="https://code.jquery.com/jquery-2.2.3.min.js"
+        crossorigin="anonymous"></script>
+
+<!-- bootstrap -->
+<link rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+      crossorigin="anonymous"></link>
+<link rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"
+      crossorigin="anonymous"></link>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+        crossorigin="anonymous"></script>
+
+<!-- toastr -->
+<link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.css"></link>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.js"
+        crossorigin="anonymous"></script>
+
 <script src="/js/app.js" type="text/javascript"></script>
 </body>
